# HSK-Mensabot

./: README.md
scripts/: Readem.md  pi_setup.sh
src/imu_ros2_device/launch/: ybimu_display.launch.py
src/imu_ros2_device/rviz/: ybimu.rviz
src/laser_scan_merger/config/: laser_merger_param.yaml
src/laser_scan_merger/launch/: start.launch.py
src/mensabot_bringup/: CMakeLists.txt  package.xml
src/mensabot_bringup/config/: controller.yaml
src/mensabot_bringup/launch/: mapping.launch.py  navigation.launch.py  navigation_pi.launch.py  navigation_with_slam.launch.py  real_bringup.launch.py  sim_pc.launch.py  sim_pi.launch.py
src/mensabot_description/: CMakeLists.txt  package.xml
src/mensabot_description/urdf/: mensabot.gazebo  mensabot.ros2_control_real.xacro  mensabot.urdf.xacro
src/mensabot_hardware/: CMakeLists.txt  package.xml  plugin.xml
src/mensabot_hardware/config/: ekf.yaml
src/mensabot_hardware/include/mensabot_hardware/: mensabot_hardware.hpp
src/mensabot_hardware/src/: mensabot_hardware.cpp
src/mensabot_navigation/: CMakeLists.txt  package.xml
src/mensabot_navigation/config/: amcl_localization.yaml  navigation.yaml  slam_toolbox_mapping.yaml
src/mensabot_navigation/maps/: map1.pgm  map3.yaml
src/mensabot_navigation/rviz/: mapping.rviz  navigation.rviz
src/mensabot_sim/: CMakeLists.txt  package.xml
src/mensabot_sim/config/: controller.yaml  ekf.yaml  gz_bridge.yaml  naviagtion_new_mppi.yaml  navigation (Kopie).yaml  navigation.yaml  slam_toolbox_localization.yaml
src/mensabot_sim/launch/: navigation.launch.py  navigation_with_slam.launch.py  spawn_robot.launch.py  world.launch.py
src/mensabot_sim/maps/: map1.yaml  map2.pgm  map2.yaml  map3.pgm
src/mensabot_sim/rviz/: navigation.rviz
src/mensabot_sim/urdf/: mensabot.urdf.xacro
src/mensabot_simulation/: CMakeLists.txt  package.xml
src/mensabot_simulation/worlds/: home.sdf  mostly_empty_world.sdf  test_world.sdf  world3.sdf
src/mensabot_utils/: package.xml  setup.cfg  setup.py
src/mensabot_utils/mensabot_utils/: cmd_vel_transform_node.py
