<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mensabot_sim</name>
  <version>1.0.0</version>
  <description>Mensabot simulation package</description>
  <maintainer email="fabian.kroeger@stud.hs-kempten.de">fabko</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>nav2_bringup</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>laser_geometry</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
